--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
   <img class="image" src="https://media.licdn.com/dms/image/C4D12AQGWICPM2XSxpQ/article-cover_image-shrink_720_1280/0/1585036759275?e=2147483647&v=beta&t=z2lbd8YuvZc6wUCx_U3wI0pzDO1cXw8iYWSwF_xNLBM"/>
-  <div class="text">Caption Text</div>
+<!--   <div class="text">Caption Text</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
   <img class="image" src=https://m.media-amazon.com/images/I/71FgjWcMjTS._UY695_.jpg>
-  <div class="text">Caption Two</div>
+<!--   <div class="text">Caption Two</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
   <img class="image" src=https://m.media-amazon.com/images/I/41rKh3x0cqL._UX695_.jpg>
-  <div class="text">Caption Three</div>
+<!--   <div class="text">Caption Three</div> -->
 </div>
 </div>
 
