--- a/ContactUs.html
+++ b/ContactUs.html
@@ -85,6 +85,7 @@
               <span>Message</span>
             </div>
             <input type="submit" value="Send" class="bttn" />
+            <input type="submit" value="Go Back" class="bttn" />
           </form>
         </div>
       </div>
